# Cours_Open_Data_tp3

./: .gitignore  README.md  app_gradio.py  app_streamlit.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: meteo_enriched_20251216_161514.parquet
utils/: charts.py  chatbot.py  data.py
