[project]
name = "tp3-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.3",
    "gradio>=6.1.0",
    "litellm>=1.80.10",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
]
